# mixi

./: .dockerignore  .gitignore  API.md  BEATMATCHING.md  BPMDETECTION.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT_HEADER.txt  CREATE_DECKS_AI.md  DECKS.md  Dockerfile  ISSUES.md  LICENSE  MISSING.md  MIXI_PROTOCOL.md  MOBILE_AUDIT.md  PRIVACY.md  README.md  SECURITY.md  SKINS.md  VALIDATION.md  WASM.md  docker-compose.yml  eslint.config.js  fix_terminal.py  gen_locales.js  index.html  install.sh  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  v0.1.1.md  vite.config.ts  vitest.config.ts  write_midi.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cla.yml  docker.yml  docs.yml  release.yml  test.yml
api/: main.py  mcp_server.py  requirements.txt
coverage/: coverage-final.json  index.html
coverage/audio/: AudioDeviceGuard.ts.html  BpmDetector.ts.html  DropDetector.ts.html  KeyDetector.ts.html  MixiEngine.ts.html  SampleManager.ts.html  WaveformAnalyzer.ts.html  index.html
coverage/store/: hotCueStorage.ts.html  index.html  midiStore.ts.html  mixiStore.ts.html  sampleDb.ts.html  settingsStore.ts.html
coverage/types/: audio.ts.html  index.html  index.ts.html
coverage/utils/: index.html  logger.ts.html
docs/: BPM.md  index.md
docs/.vitepress/: config.ts
docs/ar/: index.md
docs/bg/: index.md
docs/bn/: index.md
docs/cs/: index.md
docs/de/: index.md
docs/el/: index.md
docs/es/: index.md
docs/fr/: index.md
docs/guide/: ai-automixer.md  architecture.md  getting-started.md  groovebox.md  mixer.md  turbobass.md  webaudio.md
docs/ha/: index.md
docs/hi/: index.md
docs/id/: index.md
docs/it/: index.md
docs/ja/: index.md
docs/ko/: index.md
docs/nl/: index.md
docs/pl/: index.md
docs/pt/: index.md
docs/public/: CNAME
docs/ro/: index.md
docs/ru/: index.md
docs/sk/: index.md
docs/sv/: index.md
docs/sw/: index.md
docs/tr/: index.md
docs/zh/: index.md
electron/: main.ts  preload.ts  tsconfig.json  updateCheck.ts  wavHeader.ts
electron/native/: index.js
mixi-core/: Cargo.toml
mixi-core/src/: automix.rs  bpm.rs  drop_detect.rs  key.rs  lib.rs  metadata.rs  pll_analysis.rs  ring_buffer.rs  waveform.rs
mixi-core/src/dsp/: biquad.rs  delay.rs  dynamics.rs  engine.rs  flanger.rs  gate.rs  mod.rs  phaser.rs  pitch_shift.rs  predictive_limiter.rs  reverb.rs  smoother.rs  spectral_sidechain.rs  waveshaper.rs
mixi-core/src/dvs/: lissajous.rs  mass_spring.rs  mod.rs  pll.rs
mixi-core/tests/: bench_dsp.rs  integration_dsp.rs
mixi-native/: Cargo.toml
mixi-native/src/: lib.rs
public/: manifest.webmanifest  sw.js
public/worklets/: diode-ladder-processor.js  mixi-dsp-worklet.js  native-output-tap.js  pitch-shift-wasm-processor.js  recording-tap.js
scripts/: build-wasm.mjs  gen-locale-pages.mjs  rename-electron-cjs.mjs
skins/skin-acid/: skin.css  skin.json
skins/skin-aqua/: skin.css  skin.json
skins/skin-arcade-invaders/: skin.css  skin.json
skins/skin-blackfluo/: skin.css  skin.json
skins/skin-bloodmoon/: skin.css  skin.json
skins/skin-casino/: skin.css  skin.json
skins/skin-dune/: skin.css  skin.json
skins/skin-eink/: skin.css  skin.json
skins/skin-freetekno/: skin.css  skin.json
skins/skin-gold/: skin.css  skin.json
skins/skin-hologram/: skin.css  skin.json
skins/skin-industrial/: skin.css  skin.json
skins/skin-matrix/: skin.css  skin.json
skins/skin-nordic/: skin.css  skin.json
skins/skin-synthwave/: skin.css  skin.json
skins/skin-vaporwave/: skin.css  skin.json
skins/skin-white/: skin.css  skin.json
src/: App.tsx  DesktopRoot.tsx  MobileApp.tsx  index.css  main.tsx  theme.ts  vite-env.d.ts
src/ai/: AutoMixEngine.ts  Blackboard.ts  SetRecorder.ts  ghostFields.ts  index.ts  useAIEngine.ts
src/audio/: AudioDeviceGuard.ts  (+19 more)
tests/: setup.ts
(+389 files in other folders)
