[package]
name = "mixi-core"
version = "0.2.0"
edition = "2021"
description = "Mixi DAW — Rust/Wasm DSP core"
license = "PolyForm-Noncommercial-1.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
open-bpm = { path = "../../open-bpm", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3          # Optimize for speed (fastest DSP processing)
lto = true             # Link-Time Optimization
strip = true           # Strip debug symbols
codegen-units = 1      # Single codegen unit for max optimization
panic = "abort"        # Remove stack-unwinding code (saves ~5-10KB)

# wasm-opt is disabled because the version bundled with wasm-pack 0.14
# doesn't support bulk-memory ops emitted by Rust 1.94+.
# Re-enable when wasm-pack ships wasm-opt ≥ 119.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
