[package]
name = "mixi-native"
version = "0.2.1"
edition = "2021"
description = "Mixi DAW — Native audio I/O bridge (cpal → N-API)"
license = "PolyForm-Noncommercial-1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# N-API bindings for Node.js / Electron
napi = { version = "2", default-features = false, features = ["napi8", "serde-json"] }
napi-derive = "2"

# Cross-platform audio I/O (CoreAudio / WASAPI / ALSA / JACK)
cpal = "0.15"

# Serialization for device info structs
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
